Adicionada imagem de teste

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button>Saiba mais</button>
         </div>
         <div class="hd-img">
-            <img src="" alt="Esta é uma imagem" >
+            <img src="img/banco.jpg" alt="Esta é uma imagem" >
         </div>
     </div>
     </header>
