Css do header completo

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">    
+
     <link rel="stylesheet" href="style.css">
-    <title>Banco</title>
+    <title>Meu Banco</title>
 </head>
 <body>
 
@@ -39,15 +47,19 @@
     <header>
     <div class="center">
         <div class="hd-conteudo">
-            <h1>Este é o titulo</h1>
+            <h1>Este é o título</h1>
             <p>Este é o conteúdo</p>
             <button>Saiba mais</button>
         </div>
         <div class="hd-img">
-            <img src="img/banco.jpg" alt="Esta é uma imagem" >
+            <!--<img src="img/banco.jpg" alt="Esta é uma imagem" >-->
+            <lottie-player id="main-img" src="https://assets3.lottiefiles.com/packages/lf20_km8fo9bv.json"  background="transparent"  speed="1"  loop autoplay></lottie-player>
+
         </div>
     </div>
     </header>
+
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 <script>
     function showMenu() {
