Primeira versão completa

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <section id="topo">
         <div class="logo">
             <!--<img src="" alt="">-->
-            <h2>Logomarca</h2>
+            <h2>Meu Banco</h2>
         </div>
         <nav class="menu-desktop">
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">Serviços</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#desc">Serviços</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#footer">Contato</a></li>
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
@@ -39,9 +39,9 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
             <ul id="lista">
                 <li><a href="">Home</a></li>
-                <li><a href="">Serviços</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#desc">Serviços</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#footer">Contato</a></li>
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
