Textos adicionados e códigos validados

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">    
 
@@ -17,14 +18,14 @@
     <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="css/desc.css">
     <link rel="stylesheet" href="css/footer.css">
-    <title>Meu Banco</title>
+    <title>Blue Leaf</title>
 </head>
 <body>
 
     <section id="topo">
         <div class="logo">
             <!--<img src="" alt="">-->
-            <h2>Meu Banco</h2>
+            <h2>Blue Leaf</h2>
         </div>
         <nav class="menu-desktop">
             <ul>
@@ -50,8 +51,8 @@
     <header>
     <div class="center">
         <div class="hd-conteudo">
-            <h1>Este é o título</h1>
-            <p>Este é o conteúdo</p>
+            <h1>Seu dinheiro, nossa responsabilidade.</h1>
+            <p>As melhores soluções pelas menores taxas. Investimento e Educação Financeira você encontra aqui.</p>
             <button>Saiba mais</button>
         </div>
         <div class="hd-img">
@@ -63,10 +64,10 @@
     </header>
 
 
-    <!-------------- andressa ------>
+    <!-- andressa -->
     <div id="desc">
         <h1>Cartão de crédito ou investimentos? Resolva sua vida direto no app!</h1>
-        <h2>Cartão de crédito Neon: guia completo sobre o azulzinho</h2>
+        <h2>Cartão de crédito Blue Leaf: guia completo sobre o azulzinho</h2>
         <div class="align-colum">
             <main class="cards">
                 <section class="card credito">
@@ -74,7 +75,7 @@
                         <img src="img/borda.png" alt="credito">
                     </div>
                     <h3>Crédito</h3>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                    <span>Não precisa ter uma conta no BL para ter Blue Card para chamar de seu.</span>
                     <button>Leia mais</button>
                 </section>
                 <section class="card taxas">
@@ -82,7 +83,7 @@
                         <img src="img/conselheiro-financeiro.png" alt="Sem taxas">
                     </div>
                     <h3>Sem taxas</h3>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                    <span>Para apoiar você a seguir os seus sonhos.</span>
                     <button>Leia mais</button>
                 </section>
                 <section class="card investir">
@@ -90,7 +91,7 @@
                         <img src="img/financiamento-colaborativo.png" alt="investimentos">
                     </div>
                     <h3>Investimentos</h3>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                    <span>Soluções em investimentos que combinam com você e com seus objetivos.</span>
                     <button>Leia mais</button>
                 </section>
             </main>
@@ -99,7 +100,7 @@
 
 
 
-    <!---------------------- Mirosmar----------->
+    <!-- Mirosmar -->
 
 
     <section id="sobre" class="flex-container-column">
@@ -107,11 +108,8 @@
             <div class="flex-container-row section-details">
                 <h2>Um Banco Feito Com <mark>Você e Pra Você</mark></h2>
                 <div class="texto-img">
-                    <p>Lorem ipsum dolor sit amet, adipiscing elit, sed do tempor incididunt ut 
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    </p>
+                    <p>O Blue Leaf é uma Instituição de Pagamento autorizada pelo Banco Central do Brasil, que atua nas modalidades de emissão de moeda eletrônica e emissão de instrumento pós pago.
+                    Foi fundada em 2022 com a missão de unir tecnologia e design para redesenhar e simplificar a experiência financeira das pessoas, além de ajudá-las a gerir melhor o próprio dinheiro.</p>
                     <img src="img/mulher-usando-celular.png" alt="Imagem de mulher usando app do banco" class="imagens">
                 </div>
                 <a href="#sobre" class="botao" target="_self">Saiba mais</a>
@@ -121,7 +119,7 @@
 
 
 
-    <!-------------- Weverton -------------->
+    <!-- Weverton -->
 
     <section id="footer">
         
@@ -130,14 +128,14 @@
 
                 <div class="flex-container-row-footer">
                     <div>
-                       <ul id="column-ul">
+                       <ul class="column-ul">
                             <li>
                                 <a href=""><h3>logo banco</h3></a>
                             </li>
                         </ul>
                     </div>
                     <div>
-                        <ul id="column-ul">
+                        <ul class="column-ul">
                             <li><a href=""><i class="fa-brands fa-facebook-square"></i></a></li>
                             <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
@@ -146,8 +144,8 @@
                         </ul>
                     </div>
                     <div>
-                        <ul id="column-ul">
-                            <li><h3>Baixar App</h3> <a href=""><i class="fa-brands fa-google-play"></i></a></i> <a href=""></a><a href=""></a><a href=""><i class="fa-brands fa-app-store-ios"></i></a></li>
+                        <ul class="column-ul">
+                            <li><h3>Baixar App</h3> <a href=""><i class="fa-brands fa-google-play"></i></a> <a href=""></a><a href=""></a><a href=""><i class="fa-brands fa-app-store-ios"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -197,7 +195,7 @@
                 <div class="flex-container-row-footer">
                     <div>
                         <p>
-                            Banco Pagamentos 2022 <br> Rua ,69 - Vila Sesámo,Ionia-io <br> CNPJ:nº 99.999.999/0000-00
+                            Blue Leaf Bank 2022 <br> Rua ,69 - Vila Sesámo,Ionia-io <br> CNPJ:nº 99.999.999/0000-00
                         </p>
                     </div>
                     <div>
