Ajuste do texto

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <header>
     <div class="center">
         <div class="hd-conteudo">
-            <h1>Seu dinheiro, nossa responsabilidade.</h1>
+            <h1>Venha para o azulzinho e cresça seu negócio</h1>
             <p>As melhores soluções pelas menores taxas. Investimento e Educação Financeira você encontra aqui.</p>
             <button>Saiba mais</button>
         </div>
